# open_cyber_glove_ros2

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
glove_ros/: serial_node.py  visualizer_node.py
model/: 20250417_165613_test.onnx
msg/: GloveDataMsg.msg
open_cyber_glove_ros2/: data_node.py  visualizer_node.py
